--- a/contact.html
+++ b/contact.html
@@ -221,8 +221,8 @@
                 <!-- Contact Text -->
                 <div class="col-12 col-lg-5">
                     <div class="contact-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec varius dui. Suspendisse potenti. Vestibulum ac pellentesque tortor. Aenean congue sed metus in iaculis. Cras a tortor enim. Phasellus posuere vestibulum ipsum, eget lobortis purus.</p>
-                        <p>Orci varius natoque penatibus et magnis dis ac pellentesque tortor. Aenean congue parturient montes, nascetur ridiculus mus.</p>
+                        <p>Kritik dan saran silahkan Hubungi kontak yang tertera.</p>
+                        
                     </div>
                 </div>
 
