--- a/contact.html
+++ b/contact.html
@@ -230,12 +230,12 @@
                     <!-- Single Contact Information -->
                     <div class="single-contact-information mb-30">
                         <h6>Address:</h6>
-                        <p>481 Creekside Lane Avila <br>Beach, CA 93424</p>
+                        <p>Jalan Rumbai jaya <br>Pekanbaru</p>
                     </div>
                     <!-- Single Contact Information -->
                     <div class="single-contact-information mb-30">
                         <h6>Phone:</h6>
-                        <p>+53 345 7953 32453 <br>+53 345 7557 822112</p>
+                        <p>08123737334 <br>08627121721</p>
                     </div>
                     <!-- Single Contact Information -->
                     <div class="single-contact-information mb-30">
