--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Shibu | Home</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/bg-img/logo.ico">
+    <link rel="icon" href="img/bg-img/logo.jpg">
 
     <!-- Core Stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -352,9 +352,8 @@
                 <div class="col-12">
                     <!-- Cta Content -->
                     <div class="cta-content text-center">
-                        <h2>Gluten Free Receipies</h2>
-                        <p>Fusce nec ante vitae lacus aliquet vulputate. Donec scelerisque accumsan molestie. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras sed accumsan neque. Ut vulputate, lectus vel aliquam congue, risus leo elementum nibh</p>
-                        <a href="#" class="btn delicious-btn">Discover all the receipies</a>
+                       
+                        
                     </div>
                 </div>
             </div>
@@ -406,10 +405,10 @@
                     </div>
                 </div>
 
-                <!-- Adds -->
+               <!-- Adds -->
                 <div class="col-12 col-lg-4">
                     <div class="delicious-add">
-                        <img src="img/bg-img/add.png" alt="">
+                        <img src="img/bg-img/capture.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -430,10 +429,10 @@
         <div class="insta-feeds d-flex flex-wrap">
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta1.jpg" alt="">
+                <img src="img/bg-img/Matcha.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
-                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com/p/BqhU8HUlmpW/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                 </div>
             </div>
 
@@ -457,10 +456,10 @@
 
             <!-- Single Insta Feeds -->
             <div class="single-insta-feeds">
-                <img src="img/bg-img/insta4.jpg" alt="">
+                <img src="img/bg-img/rc1.jpg" alt="">
                 <!-- Icon -->
                 <div class="insta-icon">
-                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com/p/ByGPnvOpFCX/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                 </div>
             </div>
 
