--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@
                 <div class="col-12 col-lg-4">
                     <div class="quote-area text-center">
                         <span>"</span>
-                        <h4>Nothing is better than going home to family and eating good food and relaxing</h4>
-                        <p>John Smith</p>
+                        <h4>“Good communication is just as stimulating as black coffee, and just as hard to sleep after.”</h4>
+                        <p>Anne Morrow Lindbergh</p>
                         <div class="date-comments d-flex justify-content-between">
                             <div class="date">January 04, 2018</div>
                             <div class="comments">2 Comments</div>
