--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
                     <nav class="classy-navbar justify-content-between" id="deliciousNav">
 
                         <!-- Logo -->
-                        <a class="nav-brand" href="index.html"><img src="img/core-img/logo.png" alt=""></a>
+                        <a class="nav-brand" href="index.html"><img src="img/bg-img/logo.jpg" width="100px" height="100px"></a>
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
