--- a/about.html
+++ b/about.html
@@ -212,14 +212,14 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading">
-                        <h3>Who we are and what we do?</h3>
+                        <h3>Apakah Shibu Itu??</h3>
                     </div>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-12">
-                    <h6 class="sub-heading pb-5">Donec quis metus ac arcu luctus accumsan. Nunc in justo tincidunt, sodales nunc id, finibus nibh. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce nec ante vitae lacus aliquet vulputate. Donec scelerisque accumsan molestie. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae</h6>
+                    <h6 class="sub-heading pb-5">Shibu adalah tempat bersantai kekinian yang menyediakan minuman minuman ala ala jepang yang sangat menarik dan juga nikmat</h6>
 
                     <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec varius dui. Suspendisse potenti. Vestibulum ac pellentesque tortor. Aenean congue sed metus in iaculis. Cras a tortor enim. Phasellus posuere vestibulum ipsum, eget lobortis purus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin malesuada et mauris ut lobortis. Sed eu iaculis sapien, eget luctus quam. Aenean hendrerit varius massa quis laoreet. Donec quis metus ac arcu luctus accumsan. Nunc in justo tincidunt, sodales nunc id, finibus nibh. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
                 </div>
