--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>Delicious - Food Blog Template | About</title>
+    <title>Shibu | About</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -23,7 +23,7 @@
     <!-- Preloader -->
     <div id="preloader">
         <i class="circle-preloader"></i>
-        <img src="img/core-img/salad.png" alt="">
+        <img src="img/core-img/asdas.png" alt="">
     </div>
 
     <!-- Search Wrapper -->
@@ -219,9 +219,8 @@
 
             <div class="row">
                 <div class="col-12">
-                    <h6 class="sub-heading pb-5">Shibu adalah tempat bersantai kekinian yang menyediakan minuman minuman ala ala jepang yang sangat menarik dan juga nikmat</h6>
+                    <h6 class="sub-heading pb-5">Shibu adalah tempat bersantai kekinian yang menyediakan minuman dan makanan ala ala jepang yang sangat menarik dan juga nikmat,Tersedia banyak varian rasa mulai dari makanan sampai keminuman lainnya</h6>
 
-                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec varius dui. Suspendisse potenti. Vestibulum ac pellentesque tortor. Aenean congue sed metus in iaculis. Cras a tortor enim. Phasellus posuere vestibulum ipsum, eget lobortis purus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin malesuada et mauris ut lobortis. Sed eu iaculis sapien, eget luctus quam. Aenean hendrerit varius massa quis laoreet. Donec quis metus ac arcu luctus accumsan. Nunc in justo tincidunt, sodales nunc id, finibus nibh. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
                 </div>
             </div>
 
@@ -229,36 +228,36 @@
                 <!-- Single Cool Fact -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-cool-fact">
-                        <img src="img/core-img/salad.png" alt="">
-                        <h3><span class="counter">1287</span></h3>
-                        <h6>Amazing receipies</h6>
+                        <img src="img/core-img/minuman.png"width="80px" height="80px alt="">
+                        <h3><span class="counter">30</span></h3>
+                        <h6>Tersedia Minuman Kekinian</h6>
                     </div>
                 </div>
 
                 <!-- Single Cool Fact -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-cool-fact">
-                        <img src="img/core-img/hamburger.png" alt="">
-                        <h3><span class="counter">25</span></h3>
-                        <h6>Burger receipies</h6>
+                        <img src="img/core-img/minuman2.png"width="70px" height="50px alt="">
+                        <h3><span class="counter">18</span></h3>
+                        <h6>Tersedia Minuman Biasa</h6>
                     </div>
                 </div>
 
                 <!-- Single Cool Fact -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-cool-fact">
-                        <img src="img/core-img/rib.png" alt="">
-                        <h3><span class="counter">471</span></h3>
-                        <h6>Meat receipies</h6>
+                        <img src="img/core-img/snack.png"width="90px" height="90px  alt="">
+                        <h3><span class="counter">23</span></h3>
+                        <h6>Tersedia Makanan Ringan</h6>
                     </div>
                 </div>
 
                 <!-- Single Cool Fact -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="single-cool-fact">
-                        <img src="img/core-img/pancake.png" alt="">
-                        <h3><span class="counter">326</span></h3>
-                        <h6>Desert receipies</h6>
+                        <img src="img/core-img/makanan.png"width="100px" height="100px  alt="">
+                        <h3><span class="counter">30</span></h3>
+                        <h6>Tersedia Makanan Berat</h6>
                     </div>
                 </div>
             </div>
