--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <title>Shibu | Contact</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <link rel="icon" href="img/bg-img/logo.jpg">
 
     <!-- Core Stylesheet -->
     <link rel="stylesheet" href="style.css">
