--- a/blog-post.html
+++ b/blog-post.html
@@ -187,74 +187,54 @@
         </div>
     </section>
 
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination">
-                            <li class="page-item active"><a class="page-link" href="#">01.</a></li>
-                            <li class="page-item"><a class="page-link" href="#">02.</a></li>
-                            <li class="page-item"><a class="page-link" href="#">03.</a></li>
-                        </ul>
-                    </nav>
-                </div>
-
-                <div class="col-12 col-lg-4">
-                    <div class="blog-sidebar-area">
-
-                        <!-- Widget -->
-                        <div class="single-widget mb-80">
-                            <h6>Archive</h6>
-                            <ul class="list">
-                                <li><a href="#">March 2018</a></li>
-                                <li><a href="#">February 2018</a></li>
-                                <li><a href="#">January 2018</a></li>
-                                <li><a href="#">December 2017</a></li>
-                                <li><a href="#">November 2017</a></li>
-                            </ul>
-                        </div>
-
-                        <!-- Widget -->
-                        <div class="single-widget mb-80">
-                            <h6>Categories</h6>
-                            <ul class="list">
-                                <li><a href="#">Restaurants</a></li>
-                                <li><a href="#">Food &amp; Drinks</a></li>
-                                <li><a href="#">Vegans</a></li>
-                                <li><a href="#">Events &amp; Lifestyle</a></li>
-                                <li><a href="#">Uncategorized</a></li>
-                            </ul>
-                        </div>
-
-                        <!-- Widget -->
-                        <div class="single-widget mb-80">
-                            <h6>Newsletter</h6>
-
-                            <!-- Form -->
-                            <div class="newsletter-form bg-img bg-overlay" style="background-image: url(img/bg-img/bg1.jpg);">
-                                <form action="#" method="post">
-                                    <input type="email" name="email" placeholder="Subscribe to newsletter">
-                                    <button type="submit" class="btn delicious-btn w-100">Subscribe</button>
-                                </form>
-                                <p>Fusce nec ante vitae lacus aliquet vulputate. Donec sceleri sque accumsan molestie. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia.</p>
-                            </div>
-                        </div>
-
-                        <!-- Widget -->
-                        <div class="single-widget mb-80">
-                            <div class="quote-area text-center">
-                                <span>"</span>
-                                <h4>Nothing is better than going home to family and eating good food and relaxing</h4>
-                                <p>John Smith</p>
-                                <div class="date-comments d-flex justify-content-between">
-                                    <div class="date">January 04, 2018</div>
-                                    <div class="comments">2 Comments</div>
-                                </div>
-                            </div>
-                        </div>
-                        
+                    <section class="best-receipe-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-heading">
+                        <h3>Recommended Menu</h3>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
+
+            <div class="row">
+                <!-- Single Best Receipe Area -->
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="single-best-receipe-area mb-30">
+                        <img src="img/bg-img/rc1.jpg" alt="">
+                        <div class="receipe-content">
+                            <a href="receipe-post.html">
+                                <h5>Signature Chocolate</h5>
+                            </a>
+                            <div class="ratings">
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Best Receipe Area -->
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="single-best-receipe-area mb-30">
+                        <img src="img/bg-img/rc2.jpg" alt="">
+                        <div class="receipe-content">
+                            <a href="receipe-post.html">
+                                <h5>Lemon Charcoal</h5>
+                            </a>
+                            <div class="ratings">
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
     <!-- ##### Blog Area End ##### -->
 
     <!-- ##### Follow Us Instagram Area Start ##### -->
