--- a/blog-post.html
+++ b/blog-post.html
@@ -242,7 +242,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h5>Follow Us Instragram</h5>
+                    <h5>Follow Us in Instagram</h5>
                 </div>
             </div>
         </div>
