--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                             <div id="breakingNewsTicker" class="ticker">
                                 <ul>
                                     <li><a href="#">Hello World!</a></li>
-                                    <li><a href="#">Welcome to Colorlib Family.</a></li>
+                                    
                                     <li><a href="#">Hello Delicious!</a></li>
                                 </ul>
                             </div>
@@ -114,6 +114,7 @@
                                         </ul>
                                   
                                     <li><a href="receipe-post.html">Receipies</a></li>
+                                     <li><a href="price.html">Price</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                     <li><a href="about.html">About Us</a></li>
                                 </ul>
