--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                                     </li>
                                     
                                     <li><a href="receipe-post.html">Receipies</a></li>
+                                    <li><a href="Prices.html">Prices</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                     <li><a href="about.html">About Us</a></li>
                                 </ul>
