--- a/receipe-post.html
+++ b/receipe-post.html
@@ -189,7 +189,19 @@
 
                     <!-- Ingredients -->
 <div class="row">
-                <!-- Single Best Receipe Area -->
+    <div>
+        <div>
+            <div>
+                <div>
+                    <div>
+                        </div>
+                        </div>
+                        </div>
+                        </div>
+                        </div>
+                <!-- Singl
+                    <div>
+                        <div>e Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-best-receipe-area mb-30">
                         <img src="img/bg-img/rc1.jpg" alt="">
