--- a/receipe-post.html
+++ b/receipe-post.html
@@ -189,24 +189,23 @@
 
                     <!-- Ingredients -->
 <div class="row">
-    <div>
-        <div>
-            <div>
-                <div>
-                    <div>
-                        </div>
-                        </div>
-                        </div>
-                        </div>
-                        </div>
-                <!-- Singl
-                    <div>
-                        <div>e Best Receipe Area -->
+   <section class="best-receipe-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-heading">
+                        <h3>Resep Minuman SHIBU</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-best-receipe-area mb-30">
                         <img src="img/bg-img/rc1.jpg" alt="">
                         <div class="receipe-content">
-                            <a href="receipe-post.html">
+                            <a href="receipe-post.html">    
                                 <h5>Signature Chocolate</h5>
                             </a>
                             <div class="ratings">
