--- a/receipe-post.html
+++ b/receipe-post.html
@@ -272,7 +272,21 @@
                         <!-- Single Preparation Step -->
                         <div class="single-preparation-step d-flex">
                             <h4>01.</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec varius dui. Suspendisse potenti. Vestibulum ac pellentesque tortor. Aenean congue sed metus in iaculis. Cras a tortor enim. Phasellus posuere vestibulum ipsum, eget lobortis purus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+                            <p>Kalau kamu perhatikan, menu Taro Bubble Tea memang selalu jadi yang paling dicari di kafe-kafe milk tea. Kayaknya, belum lengkap sebuah kafe milk tea kalau belum ada pilihan rasa taro di dalam deretan pilihan minumannya. Rasanya yang lucu emang wajar kalau bikin banyak orang ketagihan. Yuk coba buat sendiri taro milk tea kreasimu.
+
+Bahan untuk membuatnya:
+
+70 gram bubuk taro
+180 ml air panas
+2-3 sdm krimer
+2-4 sdm gula cair (atau sesuai selera)
+60 gram es batu
+Cara membuatnya:
+
+Larutkan bubuk taro dengan air panas. Aduk-aduk hingga semuanya benar-benar larut ya. Oh iya, bubuk taro bisa kamu dapatkan di toko-toko bahan makanan atau sudah ramai dijual secara online.
+Tuangkan ke dalam gelas shaker atau gelas berpenutup, tambahkan krimer atau susu rendah lemak dan gula cair.
+Terakhir masukkan es batu dan kocok hingga esnya larut dalam minuman taro-mu. Sajikan di atas bubble yang sudah disiapkan dalam gelas saji. Topping seperti egg-pudding atau taro pudding juga cocok dinikmati bersama taro milk tea ini!
+Tuh nggak sulit kan? Sekarang minuman andalan setiap kafe bubble tea juga bisa hadir dengan mudah di dapur kamu! </p>
                         </div>
                         <!-- Single Preparation Step -->
                         <div class="single-preparation-step d-flex">
